[tool.poetry]
name = "my-pwm"
version = "0.0.9"
description = "Passward maneger"
readme = "README.rst"
authors = ["Daisuke Oku <w.40141@gmail.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.3.1"
pyperclip = "^1.8.0"
qrcode = "^6.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.780"
flake8 = "^3.8.3"
isort = "^4.3.21"
pytest = "^5.4.3"

[tool.poetry.scripts]
pw = 'my_pwm:main'

[tool.black]
line-length = 99
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = 1

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
